--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "[102 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,6 +749,339 @@
     "\n",
     "el_universal['n_tokens_title'] = tokenize_column(el_universal, 'title')\n",
     "\n",
+    "el_universal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Asesinan a activista en la sierra de Oaxaca; ambientalistas exigen justicia                    1\n",
+       "Ciudadanos contratados durante pandemia ya trabajan en calles de SLP                           1\n",
+       "Regresa Covid-19 a Wuhan; detectan un caso nuevo en la ciudad donde inició la pandemia         1\n",
+       "Avianca suspende totalmente operaciones por coronavirus                                        1\n",
+       "Panini, Sarita, Saldívar y Luisito Rey, los más odiados de las redes                           1\n",
+       "                                                                                              ..\n",
+       "Arman fiesta con banda y golpean a funcionarios que intentaron cancelar festejo en Ecatepec    1\n",
+       "Diseñadores de moda mexicana felicitan a sus mamás en el Día de la Madre                       1\n",
+       "Qué es la \"contención inteligente\", la \"pieza clave\" para combatir el Covid-19                 1\n",
+       "Fallecen por Covid-19 dos residentes de asilo de ancianos en Nuevo León                        1\n",
+       "Los autos de Michael Jordan que aparecen en su serie                                           1\n",
+       "Name: title, Length: 81, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Valores duplicados\n",
+    "# Paso 8 eliminar duplicados\n",
+    "\n",
+    "#el_universal['url'].value_counts()\n",
+    "#el_universal['body'].value_counts()\n",
+    "el_universal['title'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>host</th>\n",
+       "      <th>n_tokens_title</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0cf5ba3ba82168b2215cf3d109a9b4db</th>\n",
+       "      <td>\\nEcatepec, Méx.- Tres hombres que agredieron ...</td>\n",
+       "      <td>Arman fiesta con banda y golpean a funcionario...</td>\n",
+       "      <td>https://www.eluniversal.com.mx/metropoli/cdmx/...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                               body  \\\n",
+       "uid                                                                                   \n",
+       "0cf5ba3ba82168b2215cf3d109a9b4db  \\nEcatepec, Méx.- Tres hombres que agredieron ...   \n",
+       "\n",
+       "                                                                              title  \\\n",
+       "uid                                                                                   \n",
+       "0cf5ba3ba82168b2215cf3d109a9b4db  Arman fiesta con banda y golpean a funcionario...   \n",
+       "\n",
+       "                                                                                url  \\\n",
+       "uid                                                                                   \n",
+       "0cf5ba3ba82168b2215cf3d109a9b4db  https://www.eluniversal.com.mx/metropoli/cdmx/...   \n",
+       "\n",
+       "                                                    host  n_tokens_title  \n",
+       "uid                                                                       \n",
+       "0cf5ba3ba82168b2215cf3d109a9b4db  www.eluniversal.com.mx             9.0  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "el_universal[el_universal['title'] == 'Arman fiesta con banda y golpean a funcionarios que intentaron cancelar festejo en Ecatepec']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "el_universal.drop_duplicates(subset=['title'], keep='first', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>host</th>\n",
+       "      <th>n_tokens_title</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>06fb592be26353fd61608fc9ec11a760</th>\n",
+       "      <td>0 % PULSO SOCIAL0 Mientras el número de conta...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://de10.com.mx/cultura-digital/en-china-u...</td>\n",
+       "      <td>de10.com.mx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f7413085a031bd893bf66532e43f7cb2</th>\n",
+       "      <td>\\nLa pandemia de Covid-19 ya ha contagiado a m...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.viveusa.mx/bienestar/que-es-la-inm...</td>\n",
+       "      <td>www.viveusa.mx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03a3950f85e3b36ae0dcf7ef88f718ed</th>\n",
+       "      <td>\\nLa reciente fórmula que estableció ESPN para...</td>\n",
+       "      <td>ESPN cambia a sus comentaristas de Monday Nigh...</td>\n",
+       "      <td>https://www.eluniversal.com.mx/universal-depor...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e96d935be70d5eb3ac3dc76234acdd6f</th>\n",
+       "      <td>\\nChina elevó este domingo el nivel de riesgo ...</td>\n",
+       "      <td>Regresa Covid-19 a Wuhan; detectan un caso nue...</td>\n",
+       "      <td>https://www.eluniversal.com.mx/mundo/regresa-c...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bf0f377fb7df456e5ad40b45e1b47a2f</th>\n",
+       "      <td>\\nEl vicepresidente de Estados Unidos, Mike Pe...</td>\n",
+       "      <td>Vicepresidente de EU se aisla tras positivo de...</td>\n",
+       "      <td>https://www.eluniversal.com.mx/mundo/vicepresi...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327ca059eccdf61575e26aa018c7034</th>\n",
+       "      <td>\\nAmaury Vergara, presidente del Guadalajara, ...</td>\n",
+       "      <td>Chivas estrenará su serie de televisión</td>\n",
+       "      <td>https://www.eluniversal.com.mx/universal-depor...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4506944d0636463385c3963a6c0ae21f</th>\n",
+       "      <td>A unas horas del Día de las Madres, en lugar d...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.elgrafico.mx/la-roja/avisan-mujer-...</td>\n",
+       "      <td>www.elgrafico.mx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5af9a2452142b795cc1eb2251fb3d870</th>\n",
+       "      <td>\\nLa corista Mollie Gould presumió sus dotes d...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.viveusa.mx/showbiz/mollie-gould-no...</td>\n",
+       "      <td>www.viveusa.mx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76bf2bb1352d047f99507ef88ac30cd1</th>\n",
+       "      <td>\\nSalma Hayek publicó una selfie en redes soci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.viveusa.mx/showbiz/salma-hayek-se-...</td>\n",
+       "      <td>www.viveusa.mx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bbb1d03d2f642fe90ff9c493d2c9d640</th>\n",
+       "      <td>\\nNos hacen ver que algunos de los opositores ...</td>\n",
+       "      <td>Los orgullosos aliados de la 4T</td>\n",
+       "      <td>https://www.eluniversal.com.mx/nacion/bajo-res...</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                               body  \\\n",
+       "uid                                                                                   \n",
+       "06fb592be26353fd61608fc9ec11a760   0 % PULSO SOCIAL0 Mientras el número de conta...   \n",
+       "f7413085a031bd893bf66532e43f7cb2  \\nLa pandemia de Covid-19 ya ha contagiado a m...   \n",
+       "03a3950f85e3b36ae0dcf7ef88f718ed  \\nLa reciente fórmula que estableció ESPN para...   \n",
+       "e96d935be70d5eb3ac3dc76234acdd6f  \\nChina elevó este domingo el nivel de riesgo ...   \n",
+       "bf0f377fb7df456e5ad40b45e1b47a2f  \\nEl vicepresidente de Estados Unidos, Mike Pe...   \n",
+       "...                                                                             ...   \n",
+       "1327ca059eccdf61575e26aa018c7034  \\nAmaury Vergara, presidente del Guadalajara, ...   \n",
+       "4506944d0636463385c3963a6c0ae21f  A unas horas del Día de las Madres, en lugar d...   \n",
+       "5af9a2452142b795cc1eb2251fb3d870  \\nLa corista Mollie Gould presumió sus dotes d...   \n",
+       "76bf2bb1352d047f99507ef88ac30cd1  \\nSalma Hayek publicó una selfie en redes soci...   \n",
+       "bbb1d03d2f642fe90ff9c493d2c9d640  \\nNos hacen ver que algunos de los opositores ...   \n",
+       "\n",
+       "                                                                              title  \\\n",
+       "uid                                                                                   \n",
+       "06fb592be26353fd61608fc9ec11a760                                                NaN   \n",
+       "f7413085a031bd893bf66532e43f7cb2                                                NaN   \n",
+       "03a3950f85e3b36ae0dcf7ef88f718ed  ESPN cambia a sus comentaristas de Monday Nigh...   \n",
+       "e96d935be70d5eb3ac3dc76234acdd6f  Regresa Covid-19 a Wuhan; detectan un caso nue...   \n",
+       "bf0f377fb7df456e5ad40b45e1b47a2f  Vicepresidente de EU se aisla tras positivo de...   \n",
+       "...                                                                             ...   \n",
+       "1327ca059eccdf61575e26aa018c7034            Chivas estrenará su serie de televisión   \n",
+       "4506944d0636463385c3963a6c0ae21f                                                NaN   \n",
+       "5af9a2452142b795cc1eb2251fb3d870                                                NaN   \n",
+       "76bf2bb1352d047f99507ef88ac30cd1                                                NaN   \n",
+       "bbb1d03d2f642fe90ff9c493d2c9d640                    Los orgullosos aliados de la 4T   \n",
+       "\n",
+       "                                                                                url  \\\n",
+       "uid                                                                                   \n",
+       "06fb592be26353fd61608fc9ec11a760  https://de10.com.mx/cultura-digital/en-china-u...   \n",
+       "f7413085a031bd893bf66532e43f7cb2  https://www.viveusa.mx/bienestar/que-es-la-inm...   \n",
+       "03a3950f85e3b36ae0dcf7ef88f718ed  https://www.eluniversal.com.mx/universal-depor...   \n",
+       "e96d935be70d5eb3ac3dc76234acdd6f  https://www.eluniversal.com.mx/mundo/regresa-c...   \n",
+       "bf0f377fb7df456e5ad40b45e1b47a2f  https://www.eluniversal.com.mx/mundo/vicepresi...   \n",
+       "...                                                                             ...   \n",
+       "1327ca059eccdf61575e26aa018c7034  https://www.eluniversal.com.mx/universal-depor...   \n",
+       "4506944d0636463385c3963a6c0ae21f  https://www.elgrafico.mx/la-roja/avisan-mujer-...   \n",
+       "5af9a2452142b795cc1eb2251fb3d870  https://www.viveusa.mx/showbiz/mollie-gould-no...   \n",
+       "76bf2bb1352d047f99507ef88ac30cd1  https://www.viveusa.mx/showbiz/salma-hayek-se-...   \n",
+       "bbb1d03d2f642fe90ff9c493d2c9d640  https://www.eluniversal.com.mx/nacion/bajo-res...   \n",
+       "\n",
+       "                                                    host  n_tokens_title  \n",
+       "uid                                                                       \n",
+       "06fb592be26353fd61608fc9ec11a760             de10.com.mx             NaN  \n",
+       "f7413085a031bd893bf66532e43f7cb2          www.viveusa.mx             NaN  \n",
+       "03a3950f85e3b36ae0dcf7ef88f718ed  www.eluniversal.com.mx             6.0  \n",
+       "e96d935be70d5eb3ac3dc76234acdd6f  www.eluniversal.com.mx             8.0  \n",
+       "bf0f377fb7df456e5ad40b45e1b47a2f  www.eluniversal.com.mx             6.0  \n",
+       "...                                                  ...             ...  \n",
+       "1327ca059eccdf61575e26aa018c7034  www.eluniversal.com.mx             4.0  \n",
+       "4506944d0636463385c3963a6c0ae21f        www.elgrafico.mx             NaN  \n",
+       "5af9a2452142b795cc1eb2251fb3d870          www.viveusa.mx             NaN  \n",
+       "76bf2bb1352d047f99507ef88ac30cd1          www.viveusa.mx             NaN  \n",
+       "bbb1d03d2f642fe90ff9c493d2c9d640  www.eluniversal.com.mx             2.0  \n",
+       "\n",
+       "[102 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tabla final\n",
     "el_universal"
    ]
   }
